# stuff

./: .gitignore
cpp_lexer/: CMakeLists.txt  cpp_lexer.h  lexer.h  main.cpp
enumgen/: enum.ts  generate.sh
enumgen/src/: CMakeLists.txt  Color.enum.h  Color.enum.ts  enum_meta.h  main.cpp
enumthing/: .gitignore  CMakeLists.txt  enum.h  main.cpp
lexer/: BaseLexer.h  BaseLexerCore.h  CMakeLists.txt  base_lexer.h  base_lexer_core.h  code.txt  lexer.h  main.cpp
parser/: .gitignore  CMakeLists.txt  main.cpp  parser.h
pratt_parser/: CMakeLists.txt  PrattParser.h  main.cpp
test_parser/: BaseParser.h  CMakeLists.txt  Expression.h  TestParser.h  code.txt  main.cpp
